--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -4,9 +4,8 @@
 
 body {
   font-family: $font-body;
-  font-size: 1rem;
+  font-size: $default-font-size;
   line-height: 1.5;
-  color: $color-secondary;
 }
 
 h1, h2, h3, h4, h5, h6 {
