--- a/imports/_fonts.scss
+++ b/imports/_fonts.scss
@@ -1,3 +1,3 @@
-/* base/_fonts.scss */
+/* imports/_fonts.scss */
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Work+Sans:wght@400;600&display=swap');
