fix: re-factored root-vars into base/

--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -34,7 +34,7 @@ $heading-scale: (
   h5: 1,
   h6: 0.875
 );
-// Fonts should be imported at /base/_fonts.scss 
+// Fonts should be imported at /imports/_fonts.scss 
 $font-heading: 'Nunito', Helvetica, Arial, sans-serif;
 $font-body: 'Work Sans', Helvetica, Arial, sans-serif;
 
