--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,7 @@
 /* main.scss */
 
 // base
-@use 'base/theme-vars';
+@use 'base/root-vars';
 @use 'base/reset';
 @use 'base/base';
 @use 'base/typography';
