--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -50,7 +50,7 @@ $breakpoints: (
 // Spacing & Radiuses
 $default-spacer: 1rem;
 $-spacing-multipliers: 0, 0.25, 0.5, 1, 1.5;
-$-radius-multipliers: 0, 0.125, 0.375, 0.5, 1;
+$-radius-multipliers: 0, 0.125, 0.25, 0.375, 0.5, 1;
 
 // Size percentages
 $size-percentages: (
