feat: renamed border-color util class name to border

--- a/utilities/_utilities.scss
+++ b/utilities/_utilities.scss
@@ -217,7 +217,7 @@ $util-classes:
   ),
   "border-color": (
     property: border-color,
-    class: border-color,
+    class: border,
     values: $colors
   ),
   // flexbox utils
