--- a/utilities/_utilities.scss
+++ b/utilities/_utilities.scss
@@ -14,6 +14,12 @@ $util-classes:
     class: w,
     values: $size-percentages
   ),
+  "max-width": (
+    responsive: true,
+    property: max-width,
+    class: mw,
+    values: $size-percentages
+  ),
   "height": (
     responsive: true,
     property: height,
