fix: use sass map in _variables

--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 /* abstracts/_variables.scss */
 
 @use 'functions' as *;
+@use 'sass:map';
 
 // Debug & Testing variables
 $debug-color-contrast: false;
