--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -1,15 +1,10 @@
-/* abstracts/_mixins.scss */
-
-@use 'variables' as *;
+/* settings/_mixins.scss */
 
 // Media breakpoints
 @forward 'mixins/media';
 
 // Utilities
 @forward 'mixins/utilities';
-
-// Buttons
-@forward 'mixins/buttons';
 
 // Debug tools
 @forward 'mixins/debug-tools';
