--- a/scss/settings/mixins/_debug-tools.scss
+++ b/scss/settings/mixins/_debug-tools.scss
@@ -1,11 +1,9 @@
-/* abstracts/mixins/_debug-tools.scss */
-
-@use '../variables' as *;
+/* settings/mixins/_debug-tools.scss */
 
 // Contrast debugger. View all colors as grayscale filter to better see how well they contrast each other.
 // Sets <HTML> to grayscale. May be sensitive to position variations, z-index and other properties.
 @mixin debug-color-contrast($on: true) {
   @if $on {
-    filter: grayscale(100%);
+    html { filter: grayscale(100%); }
   }
 }
