--- a/scss/settings/mixins/_utilities.scss
+++ b/scss/settings/mixins/_utilities.scss
@@ -1,11 +1,12 @@
-/* abstracts/mixins/_utilities.scss */
+/* settings/mixins/_utilities.scss */
 
-@use '../variables' as *;
-@use '../functions' as *;
-@use 'media' as *;
 @use 'sass:map';
 @use 'sass:list';
 @use 'sass:meta';
+
+@use '../' as s;
+@use '../functions' as f;
+@use 'media' as m;
 
 // Generate util class
 @mixin generate-util-class($name, $data, $responsive: false) {
@@ -20,7 +21,7 @@
 
   // convert any list to a map
   @if meta.type-of($values)=='list' {
-    $values: list-to-map($values);
+    $values: f.list-to-map($values);
   }
 
   @each $valueName, $value in $values {
@@ -30,17 +31,21 @@
       $suffix: "-#{$valueName}";
     }
 
-    @if $responsive ==false or $responsive ==null {
+    @if $responsive == false or $responsive == null {
       .#{$class}#{$suffix} {
         @include -apply-props($property, $value);
       }
     }
 
     @if $responsive ==true and $isResponsive ==true {
-      @each $bp, $bpv in $breakpoints {
-        @include respond-to($bp) {
-          .#{$bp}\:#{$class}#{$suffix} {
-            @include -apply-props($property, $value);
+      @each $bp, $bpv in s.$breakpoints {
+        @each $bp, $bpv in s.$breakpoints {
+          @if $bpv != 0 {
+            @include m.respond-to($bp) {
+              .#{$bp}\:#{$class}#{$suffix} { 
+                @include -apply-props($property, $value);
+              }
+            }
           }
         }
       }
