--- a/scss/settings/variables/_colors.scss
+++ b/scss/settings/variables/_colors.scss
@@ -1,6 +1,6 @@
-$color-primary: #1F7A6B !default;
+$color-primary: #1f7a5c !default;
 
-$color-body-bg: #f8fcfa !default;
+$color-body-bg: #ffffff !default;
 $color-surface: #ffffff !default;
 $color-body-text: #212925 !default;
 $color-muted: #858585 !default;
