--- a/scss/settings/variables/_typography.scss
+++ b/scss/settings/variables/_typography.scss
@@ -44,3 +44,4 @@ $subtitle-scale: (
 // Fonts should be imported at /imports/_fonts.scss 
 $font-heading: "Segoe UI", system-ui, -apple-system, "Helvetica Neue", Arial, sans-serif !default;
 $font-body: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
