feat: added link button and base/link: link-reset class

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,6 +5,7 @@
 @use 'base/base';
 @use 'base/code';
 @use 'base/headings';
+@use 'base/links';
 @use 'base/reset';
 @use 'base/root-vars';
 @use 'base/typography';
