--- a/scss/base/_headings.scss
+++ b/scss/base/_headings.scss
@@ -2,7 +2,7 @@
 
 @use 'sass:map';
 
-@use '../settings' as s;
+@use '../settings/variables/typography' as t;
 
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-heading);
@@ -15,8 +15,8 @@ h1,h2,h3 {
   letter-spacing: -0.01em;
 }
 
-@each $tag, $scale in s.$heading-scale {
+@each $tag, $scale in t.$heading-scale {
   #{$tag} {
-    font-size: calc(#{s.$font-size-base} * #{$scale});
+    font-size: calc(var(--font-size-base) * #{$scale});
   }
 }
