--- a/scss/utilities/_utilities.scss
+++ b/scss/utilities/_utilities.scss
@@ -4,7 +4,6 @@
 @use 'sass:map';
 
 @use '../settings' as s;
-@use '../settings/tokens' as t;
 @use '../settings/mixins' as m;
 
 $util-classes: 
@@ -31,12 +30,13 @@ $util-classes:
   // color utils
   "text": (
     property: color,
-    values: t.$colors
+    class: color,
+    values: s.$colors-css
   ),
   "background": (
     property: background-color,
     class: bg,
-    values: t.$colors
+    values: s.$colors-css
   ),
   // typography
   "font-weight": (
@@ -66,145 +66,145 @@ $util-classes:
     responsive: true,
     property: box-shadow,
     class: shadow,
-    values: s.$shadows
+    values: s.$shadows-css
   ),
   // padding utils
   "padding": (
     responsive: true,
     property: padding,
     class: p,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-x": (
     responsive: true,
     property: padding-right padding-left,
     class: px,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-y": (
     responsive: true,
     property: padding-top padding-bottom,
     class: py,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-top": (
     responsive: true,
     property: padding-top,
     class: pt,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-right": (
     responsive: true,
     property: padding-right,
     class: pr,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-bottom": (
     responsive: true,
     property: padding-bottom,
     class: pb,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "padding-left": (
     responsive: true,
     property: padding-left,
     class: pl,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   // margin utils
   "margin": (
     responsive: true,
     property: margin,
     class: m,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-x": (
     responsive: true,
     property: margin-right margin-left,
     class: mx,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-y": (
     responsive: true,
     property: margin-top margin-bottom,
     class: my,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-top": (
     responsive: true,
     property: margin-top,
     class: mt,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-right": (
     responsive: true,
     property: margin-right,
     class: mr,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-bottom": (
     responsive: true,
     property: margin-bottom,
     class: mb,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   "margin-left": (
     responsive: true,
     property: margin-left,
     class: ml,
-    values: map.merge(t.$spacers, (auto: auto))
+    values: map.merge(s.$spacers-css, (auto: auto))
   ),
   // gap utils
   "gap": (
     responsive: true,
     property: gap,
     class: gap,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "row-gap": (
     responsive: true,
     property: row-gap,
     class: row-gap,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   "column-gap": (
     responsive: true,
     property: column-gap,
     class: column-gap,
-    values: t.$spacers
+    values: s.$spacers-css
   ),
   // rounded utils
   "rounded": (
     property: border-radius,
     class: rounded,
-    values: t.$radiuses
+    values: s.$radiuses-css
   ),
   "rounded-top": (
     property: border-top-left-radius border-top-right-radius,
     class: rounded-top,
-    values: t.$radiuses
+    values: s.$radiuses-css
   ),
   "rounded-right": (
     property: border-top-right-radius border-bottom-right-radius,
     class: rounded-right,
-    values: t.$radiuses
+    values: s.$radiuses-css
   ),
   "rounded-bottom": (
     property: border-bottom-left-radius border-bottom-right-radius,
     class: rounded-bottom,
-    values: t.$radiuses
+    values: s.$radiuses-css
   ),
   "rounded-left": (
     property: border-top-left-radius border-bottom-left-radius,
     class: rounded-left,
-    values: t.$radiuses
+    values: s.$radiuses-css
   ),
   // border utils
   "border": (
     responsive: true,
     property: border,
     values: (
-      null: 1px solid s.$color-border,
+      null: 1px solid var(--color-border),
       0: 0
     )
   ),
@@ -212,7 +212,7 @@ $util-classes:
     responsive: true,
     property: border-top,
     values: (
-      null: 1px solid s.$color-border,
+      null: 1px solid var(--color-border),
       0: 0
     )
   ),
@@ -220,7 +220,7 @@ $util-classes:
     responsive: true,
     property: border-right,
     values: (
-      null: 1px solid s.$color-border,
+      null: 1px solid var(--color-border),
       0: 0
     )
   ),
@@ -228,7 +228,7 @@ $util-classes:
     responsive: true,
     property: border-bottom,
     values: (
-      null: 1px solid s.$color-border,
+      null: 1px solid var(--color-border),
       0: 0
     )
   ),
@@ -236,14 +236,14 @@ $util-classes:
     responsive: true,
     property: border-left,
     values: (
-      null: 1px solid s.$color-border,
+      null: 1px solid var(--color-border),
       0: 0
     )
   ),
   "border-color": (
     property: border-color,
     class: border,
-    values: t.$colors
+    values: s.$colors-css
   ),
   // flexbox utils
   "flex": (
