--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,7 +5,7 @@
 @use 'sass:color';
 
 @use '../settings' as s;
-@use '../settings/tokens' as t;
+@use '../settings/derived' as d;
 @use '../settings/functions' as f;
 
 @mixin button-variant($name, $bg-color, $mix) {
@@ -42,7 +42,7 @@
 }
 
 @mixin generate-buttons($only: null, $mix: black) {
-  @each $name, $color in t.$colors {
+  @each $name, $color in d.$colors {
     @if $only == null or list.index($only, $name) {
       @include button-variant($name, $color, $mix);
     }
@@ -53,7 +53,7 @@
   background-color: #fff;
   color: #000;
 
-  padding: calc(var(--space-2) - 1px) var(--space-4);
+  padding: calc(var(--space-1) * 1.15) var(--space-2);
 
   &:hover:not([class~="btn--primary"]):not([class~="btn--secondary"]):not([class~="btn--accent"]):not([class~="btn--highlight"]):not([class~="btn--quiet"]):not([class~="btn--link"]) {
     $hover-color: color.mix(#000, #fff, 8%);
@@ -71,7 +71,7 @@
   text-decoration: none;
 
   border: 1px solid var(--color-border);
-  border-radius: var(--radius-2);
+  border-radius: var(--radius-1);
 
   cursor: pointer;
   transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
